# lldb-copilot

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  lldb_client.cpp  lldb_client.hpp  lldb_commands.cpp  lldb_copilot.def  plugin.cpp  session_store.cpp  session_store.hpp  settings.cpp  settings.hpp  system_prompt.hpp  windows-lldb-setup.ps1
.github/workflows/: build.yml
